fix overlapping the dragbar

--- a/cms/static/cms/sass/components/_structureboard.scss
+++ b/cms/static/cms/sass/components/_structureboard.scss
@@ -89,6 +89,7 @@
         border-radius: $border-radius-base;
 
         .cms-dragbar-title {
+            display: inline-block;
             position: relative;
             color: $structure-dragbar-color;
             font-size: $font-size-normal;
